--2020-03-02 04:15:44--  http://mines.gov.gn/docs/PDF/code_marches_publics.pdf
Resolving mines.gov.gn (mines.gov.gn)... 35.209.156.50
Connecting to mines.gov.gn (mines.gov.gn)|35.209.156.50|:80... connected.
HTTP request sent, awaiting response... 301 Moved Permanently
Location: https://mines.gov.gn/docs/PDF/code_marches_publics.pdf [following]
--2020-03-02 04:15:45--  https://mines.gov.gn/docs/PDF/code_marches_publics.pdf
Connecting to mines.gov.gn (mines.gov.gn)|35.209.156.50|:443... connected.
HTTP request sent, awaiting response... 200 OK
Length: 32443039 (31M) [application/pdf]
Saving to: ‘/dev/null’

     0K .......... .......... .......... .......... ..........  0% 4.06M 64s
    50K .......... .......... .......... .......... ..........  0% 4.10M 63s
   100K .......... .......... .......... .......... ..........  0%  185M 43s
   150K .......... .......... .......... .......... ..........  0% 4.14M 48s
   200K .......... .......... .......... .......... ..........  0%  131M 38s
   250K .......... .......... .......... .......... ..........  0% 98.5M 32s
   300K .......... .......... .......... .......... ..........  1%  248M 28s
   350K .......... .......... .......... .......... ..........  1%  229M 24s
   400K .......... .......... .......... .......... ..........  1% 4.45M 28s
   450K .......... .......... .......... .......... ..........  1%  126M 25s
   500K .......... .......... .......... .......... ..........  1%  101M 23s
   550K .......... .......... .......... .......... ..........  1%  154M 21s
   600K .......... .......... .......... .......... ..........  2%  137M 20s
   650K .......... .......... .......... .......... ..........  2% 4.62M 22s
   700K .......... .......... .......... .......... ..........  2%  172M 21s
   750K .......... .......... .......... .......... ..........  2% 75.0M 20s
   800K .......... .......... .......... .......... ..........  2%  124M 19s
   850K .......... .......... .......... .......... ..........  2%  241M 18s
   900K .......... .......... .......... .......... ..........  2% 95.7M 17s
   950K .......... .......... .......... .......... ..........  3% 79.3M 16s
  1000K .......... .......... .......... .......... ..........  3%  193M 15s
  1050K .......... .......... .......... .......... ..........  3%  186M 15s
  1100K .......... .......... .......... .......... ..........  3%  215M 14s
  1150K .......... .......... .......... .......... ..........  3%  145M 14s
  1200K .......... .......... .......... .......... ..........  3%  191M 13s
  1250K .......... .......... .......... .......... ..........  4%  236M 13s
  1300K .......... .......... .......... .......... ..........  4% 6.59M 14s
  1350K .......... .......... .......... .......... ..........  4%  130M 13s
  1400K .......... .......... .......... .......... ..........  4%  230M 13s
  1450K .......... .......... .......... .......... ..........  4%  175M 12s
  1500K .......... .......... .......... .......... ..........  4%  117M 12s
  1550K .......... .......... .......... .......... ..........  5%  291M 12s
  1600K .......... .......... .......... .......... ..........  5%  154M 11s
  1650K .......... .......... .......... .......... ..........  5%  210M 11s
  1700K .......... .......... .......... .......... ..........  5%  198M 11s
  1750K .......... .......... .......... .......... ..........  5%  137M 10s
  1800K .......... .......... .......... .......... ..........  5%  141M 10s
  1850K .......... .......... .......... .......... ..........  5%  102M 10s
  1900K .......... .......... .......... .......... ..........  6% 78.2M 10s
  1950K .......... .......... .......... .......... ..........  6% 62.7M 10s
  2000K .......... .......... .......... .......... ..........  6% 96.5M 9s
  2050K .......... .......... .......... .......... ..........  6%  126M 9s
  2100K .......... .......... .......... .......... ..........  6% 76.0M 9s
  2150K .......... .......... .......... .......... ..........  6%  143M 9s
  2200K .......... .......... .......... .......... ..........  7%  587M 9s
  2250K .......... .......... .......... .......... ..........  7%  233M 8s
  2300K .......... .......... .......... .......... ..........  7%  186M 8s
  2350K .......... .......... .......... .......... ..........  7%  185M 8s
  2400K .......... .......... .......... .......... ..........  7% 36.7M 8s
  2450K .......... .......... .......... .......... ..........  7%  261M 8s
  2500K .......... .......... .......... .......... ..........  8%  461M 8s
  2550K .......... .......... .......... .......... ..........  8% 85.6M 8s
  2600K .......... .......... .......... .......... ..........  8%  332M 8s
  2650K .......... .......... .......... .......... ..........  8% 25.1M 8s
  2700K .......... .......... .......... .......... ..........  8% 95.7M 7s
  2750K .......... .......... .......... .......... ..........  8%  187M 7s
  2800K .......... .......... .......... .......... ..........  8%  162M 7s
  2850K .......... .......... .......... .......... ..........  9%  171M 7s
  2900K .......... .......... .......... .......... ..........  9%  898M 7s
  2950K .......... .......... .......... .......... ..........  9%  186M 7s
  3000K .......... .......... .......... .......... ..........  9%  206M 7s
  3050K .......... .......... .......... .......... ..........  9%  399M 7s
  3100K .......... .......... .......... .......... ..........  9%  230M 7s
  3150K .......... .......... .......... .......... .......... 10%  216M 6s
  3200K .......... .......... .......... .......... .......... 10%  169M 6s
  3250K .......... .......... .......... .......... .......... 10%  391M 6s
  3300K .......... .......... .......... .......... .......... 10%  214M 6s
  3350K .......... .......... .......... .......... .......... 10%  245M 6s
  3400K .......... .......... .......... .......... .......... 10%  275M 6s
  3450K .......... .......... .......... .......... .......... 11%  106M 6s
  3500K .......... .......... .......... .......... .......... 11%  531M 6s
  3550K .......... .......... .......... .......... .......... 11%  281M 6s
  3600K .......... .......... .......... .......... .......... 11%  245M 6s
  3650K .......... .......... .......... .......... .......... 11%  263M 6s
  3700K .......... .......... .......... .......... .......... 11% 3.54M 6s
  3750K .......... .......... .......... .......... .......... 11% 3.69M 7s
  3800K .......... .......... .......... .......... .......... 12% 2.04G 7s
  3850K .......... .......... .......... .......... .......... 12%  705M 7s
  3900K .......... .......... .......... .......... .......... 12%  194M 7s
  3950K .......... .......... .......... .......... .......... 12%  204M 7s
  4000K .......... .......... .......... .......... .......... 12%  265M 7s
  4050K .......... .......... .......... .......... .......... 12%  492M 7s
  4100K .......... .......... .......... .......... .......... 13% 2.58G 6s
  4150K .......... .......... .......... .......... .......... 13% 2.38G 6s
  4200K .......... .......... .......... .......... .......... 13% 2.61G 6s
  4250K .......... .......... .......... .......... .......... 13% 2.59G 6s
  4300K .......... .......... .......... .......... .......... 13% 2.63G 6s
  4350K .......... .......... .......... .......... .......... 13% 2.13G 6s
  4400K .......... .......... .......... .......... .......... 14% 2.63G 6s
  4450K .......... .......... .......... .......... .......... 14% 2.61G 6s
  4500K .......... .......... .......... .......... .......... 14% 2.64G 6s
  4550K .......... .......... .......... .......... .......... 14% 2.37G 6s
  4600K .......... .......... .......... .......... .......... 14% 2.61G 6s
  4650K .......... .......... .......... .......... .......... 14% 2.63G 6s
  4700K .......... .......... .......... .......... .......... 14% 2.66G 6s
  4750K .......... .......... .......... .......... .......... 15% 2.13G 5s
  4800K .......... .......... .......... .......... .......... 15% 2.64G 5s
  4850K .......... .......... .......... .......... .......... 15% 2.64G 5s
  4900K .......... .......... .......... .......... .......... 15% 2.66G 5s
  4950K .......... .......... .......... .......... .......... 15% 2.05G 5s
  5000K .......... .......... .......... .......... .......... 15% 2.54G 5s
  5050K .......... .......... .......... .......... .......... 16% 2.64G 5s
  5100K .......... .......... .......... .......... .......... 16% 2.64G 5s
  5150K .......... .......... .......... .......... .......... 16% 2.09G 5s
  5200K .......... .......... .......... .......... .......... 16% 2.61G 5s
  5250K .......... .......... .......... .......... .......... 16% 2.37G 5s
  5300K .......... .......... .......... .......... .......... 16% 2.99G 5s
  5350K .......... .......... .......... .......... .......... 17% 2.29G 5s
  5400K .......... .......... .......... .......... .......... 17% 2.45G 5s
  5450K .......... .......... .......... .......... .......... 17% 1.97G 5s
  5500K .......... .......... .......... .......... .......... 17% 2.18G 5s
  5550K .......... .......... .......... .......... .......... 17% 2.23G 5s
  5600K .......... .......... .......... .......... .......... 17% 2.90G 5s
  5650K .......... .......... .......... .......... .......... 17% 1.76G 4s
  5700K .......... .......... .......... .......... .......... 18% 1.77G 4s
  5750K .......... .......... .......... .......... .......... 18% 4.62M 5s
  5800K .......... .......... .......... .......... .......... 18%  102M 5s
  5850K .......... .......... .......... .......... .......... 18%  189M 5s
  5900K .......... .......... .......... .......... .......... 18%  188M 5s
  5950K .......... .......... .......... .......... .......... 18%  584M 5s
  6000K .......... .......... .......... .......... .......... 19%  186M 5s
  6050K .......... .......... .......... .......... .......... 19%  150M 5s
  6100K .......... .......... .......... .......... .......... 19% 1.91G 4s
  6150K .......... .......... .......... .......... .......... 19%  239M 4s
  6200K .......... .......... .......... .......... .......... 19%  277M 4s
  6250K .......... .......... .......... .......... .......... 19%  428M 4s
  6300K .......... .......... .......... .......... .......... 20%  145M 4s
  6350K .......... .......... .......... .......... .......... 20%  256M 4s
  6400K .......... .......... .......... .......... .......... 20%  265M 4s
  6450K .......... .......... .......... .......... .......... 20%  197M 4s
  6500K .......... .......... .......... .......... .......... 20%  240M 4s
  6550K .......... .......... .......... .......... .......... 20%  217M 4s
  6600K .......... .......... .......... .......... .......... 20%  136M 4s
  6650K .......... .......... .......... .......... .......... 21%  185M 4s
  6700K .......... .......... .......... .......... .......... 21% 96.2M 4s
  6750K .......... .......... .......... .......... .......... 21%  105M 4s
  6800K .......... .......... .......... .......... .......... 21%  195M 4s
  6850K .......... .......... .......... .......... .......... 21%  224M 4s
  6900K .......... .......... .......... .......... .......... 21%  185M 4s
  6950K .......... .......... .......... .......... .......... 22%  110M 4s
  7000K .......... .......... .......... .......... .......... 22%  139M 4s
  7050K .......... .......... .......... .......... .......... 22%  202M 4s
  7100K .......... .......... .......... .......... .......... 22%  140M 4s
  7150K .......... .......... .......... .......... .......... 22%  206M 4s
  7200K .......... .......... .......... .......... .......... 22%  106M 4s
  7250K .......... .......... .......... .......... .......... 23% 1.96M 4s
  7300K .......... .......... .......... .......... .......... 23% 1.53G 4s
  7350K .......... .......... .......... .......... .......... 23% 1.37G 4s
  7400K .......... .......... .......... .......... .......... 23% 1.96G 4s
  7450K .......... .......... .......... .......... .......... 23% 2.07G 4s
  7500K .......... .......... .......... .......... .......... 23% 1.64G 4s
  7550K .......... .......... .......... .......... .......... 23% 1.03G 4s
  7600K .......... .......... .......... .......... .......... 24% 1.58G 4s
  7650K .......... .......... .......... .......... .......... 24% 1.45G 4s
  7700K .......... .......... .......... .......... .......... 24% 1.32G 4s
  7750K .......... .......... .......... .......... .......... 24% 1.24G 4s
  7800K .......... .......... .......... .......... .......... 24% 1.69G 4s
  7850K .......... .......... .......... .......... .......... 24% 2.26G 4s
  7900K .......... .......... .......... .......... .......... 25% 2.40G 4s
  7950K .......... .......... .......... .......... .......... 25% 2.12G 4s
  8000K .......... .......... .......... .......... .......... 25% 2.61G 4s
  8050K .......... .......... .......... .......... .......... 25% 2.63G 4s
  8100K .......... .......... .......... .......... .......... 25% 2.64G 4s
  8150K .......... .......... .......... .......... .......... 25% 2.42G 4s
  8200K .......... .......... .......... .......... .......... 26% 2.61G 4s
  8250K .......... .......... .......... .......... .......... 26% 2.64G 4s
  8300K .......... .......... .......... .......... .......... 26% 2.64G 4s
  8350K .......... .......... .......... .......... .......... 26% 2.12G 4s
  8400K .......... .......... .......... .......... .......... 26% 2.66G 4s
  8450K .......... .......... .......... .......... .......... 26% 2.64G 4s
  8500K .......... .......... .......... .......... .......... 26% 2.64G 4s
  8550K .......... .......... .......... .......... .......... 27% 2.42G 4s
  8600K .......... .......... .......... .......... .......... 27% 2.69G 4s
  8650K .......... .......... .......... .......... .......... 27% 2.64G 4s
  8700K .......... .......... .......... .......... .......... 27% 2.66G 4s
  8750K .......... .......... .......... .......... .......... 27% 2.19G 4s
  8800K .......... .......... .......... .......... .......... 27% 2.68G 3s
  8850K .......... .......... .......... .......... .......... 28% 2.69G 3s
  8900K .......... .......... .......... .......... .......... 28%  127M 3s
  8950K .......... .......... .......... .......... .......... 28%  978M 3s
  9000K .......... .......... .......... .......... .......... 28%  145M 3s
  9050K .......... .......... .......... .......... .......... 28% 46.5M 3s
  9100K .......... .......... .......... .......... .......... 28% 87.5M 3s
  9150K .......... .......... .......... .......... .......... 29% 97.9M 3s
  9200K .......... .......... .......... .......... .......... 29%  113M 3s
  9250K .......... .......... .......... .......... .......... 29%  208M 3s
  9300K .......... .......... .......... .......... .......... 29% 6.39M 3s
  9350K .......... .......... .......... .......... .......... 29% 94.6M 3s
  9400K .......... .......... .......... .......... .......... 29%  386M 3s
  9450K .......... .......... .......... .......... .......... 29%  152M 3s
  9500K .......... .......... .......... .......... .......... 30%  280M 3s
  9550K .......... .......... .......... .......... .......... 30%  217M 3s
  9600K .......... .......... .......... .......... .......... 30%  219M 3s
  9650K .......... .......... .......... .......... .......... 30%  279M 3s
  9700K .......... .......... .......... .......... .......... 30%  244M 3s
  9750K .......... .......... .......... .......... .......... 30%  158M 3s
  9800K .......... .......... .......... .......... .......... 31%  454M 3s
  9850K .......... .......... .......... .......... .......... 31%  149M 3s
  9900K .......... .......... .......... .......... .......... 31%  183M 3s
  9950K .......... .......... .......... .......... .......... 31% 64.4M 3s
 10000K .......... .......... .......... .......... .......... 31%  174M 3s
 10050K .......... .......... .......... .......... .......... 31%  411M 3s
 10100K .......... .......... .......... .......... .......... 32%  223M 3s
 10150K .......... .......... .......... .......... .......... 32%  538M 3s
 10200K .......... .......... .......... .......... .......... 32%  324M 3s
 10250K .......... .......... .......... .......... .......... 32%  264M 3s
 10300K .......... .......... .......... .......... .......... 32%  423M 3s
 10350K .......... .......... .......... .......... .......... 32%  274M 3s
 10400K .......... .......... .......... .......... .......... 32% 1.89M 3s
 10450K .......... .......... .......... .......... .......... 33%  982M 3s
 10500K .......... .......... .......... .......... .......... 33%  132M 3s
 10550K .......... .......... .......... .......... .......... 33%  161M 3s
 10600K .......... .......... .......... .......... .......... 33%  111M 3s
 10650K .......... .......... .......... .......... .......... 33% 1.39G 3s
 10700K .......... .......... .......... .......... .......... 33% 1.38G 3s
 10750K .......... .......... .......... .......... .......... 34% 1.49G 3s
 10800K .......... .......... .......... .......... .......... 34% 46.0M 3s
 10850K .......... .......... .......... .......... .......... 34% 2.16G 3s
 10900K .......... .......... .......... .......... .......... 34% 2.19G 3s
 10950K .......... .......... .......... .......... .......... 34% 2.03G 3s
 11000K .......... .......... .......... .......... .......... 34% 2.20G 3s
 11050K .......... .......... .......... .......... .......... 35% 2.20G 3s
 11100K .......... .......... .......... .......... .......... 35% 2.21G 3s
 11150K .......... .......... .......... .......... .......... 35% 1.80G 3s
 11200K .......... .......... .......... .......... .......... 35% 1.87G 3s
 11250K .......... .......... .......... .......... .......... 35% 2.20G 3s
 11300K .......... .......... .......... .......... .......... 35% 2.18G 3s
 11350K .......... .......... .......... .......... .......... 35% 2.00G 3s
 11400K .......... .......... .......... .......... .......... 36% 2.19G 3s
 11450K .......... .......... .......... .......... .......... 36% 2.21G 3s
 11500K .......... .......... .......... .......... .......... 36% 2.20G 3s
 11550K .......... .......... .......... .......... .......... 36% 1.67G 3s
 11600K .......... .......... .......... .......... .......... 36% 2.63G 3s
 11650K .......... .......... .......... .......... .......... 36% 2.63G 3s
 11700K .......... .......... .......... .......... .......... 37% 2.64G 3s
 11750K .......... .......... .......... .......... .......... 37% 2.44G 3s
 11800K .......... .......... .......... .......... .......... 37% 2.64G 3s
 11850K .......... .......... .......... .......... .......... 37% 2.66G 3s
 11900K .......... .......... .......... .......... .......... 37% 1.80G 3s
 11950K .......... .......... .......... .......... .......... 37% 2.12G 3s
 12000K .......... .......... .......... .......... .......... 38% 1.90G 3s
 12050K .......... .......... .......... .......... .......... 38% 2.51G 3s
 12100K .......... .......... .......... .......... .......... 38% 2.59G 3s
 12150K .......... .......... .......... .......... .......... 38% 2.42G 3s
 12200K .......... .......... .......... .......... .......... 38% 2.63G 3s
 12250K .......... .......... .......... .......... .......... 38% 2.71G 3s
 12300K .......... .......... .......... .......... .......... 38% 2.71G 3s
 12350K .......... .......... .......... .......... .......... 39% 2.20G 3s
 12400K .......... .......... .......... .......... .......... 39%  205M 3s
 12450K .......... .......... .......... .......... .......... 39% 5.57M 3s
 12500K .......... .......... .......... .......... .......... 39%  129M 3s
 12550K .......... .......... .......... .......... .......... 39%  440M 3s
 12600K .......... .......... .......... .......... .......... 39% 95.6M 3s
 12650K .......... .......... .......... .......... .......... 40%  151M 3s
 12700K .......... .......... .......... .......... .......... 40% 68.9M 3s
 12750K .......... .......... .......... .......... .......... 40%  106M 3s
 12800K .......... .......... .......... .......... .......... 40%  126M 3s
 12850K .......... .......... .......... .......... .......... 40%  258M 3s
 12900K .......... .......... .......... .......... .......... 40% 64.9M 3s
 12950K .......... .......... .......... .......... .......... 41%  167M 3s
 13000K .......... .......... .......... .......... .......... 41% 1.83G 3s
 13050K .......... .......... .......... .......... .......... 41% 1.86G 3s
 13100K .......... .......... .......... .......... .......... 41%  295M 3s
 13150K .......... .......... .......... .......... .......... 41%  143M 3s
 13200K .......... .......... .......... .......... .......... 41%  353M 3s
 13250K .......... .......... .......... .......... .......... 41%  105M 3s
 13300K .......... .......... .......... .......... .......... 42%  316M 3s
 13350K .......... .......... .......... .......... .......... 42% 1.07G 3s
 13400K .......... .......... .......... .......... .......... 42%  149M 3s
 13450K .......... .......... .......... .......... .......... 42%  425M 2s
 13500K .......... .......... .......... .......... .......... 42%  334M 2s
 13550K .......... .......... .......... .......... .......... 42%  297M 2s
 13600K .......... .......... .......... .......... .......... 43%  303M 2s
 13650K .......... .......... .......... .......... .......... 43%  232M 2s
 13700K .......... .......... .......... .......... .......... 43%  151M 2s
 13750K .......... .......... .......... .......... .......... 43%  567M 2s
 13800K .......... .......... .......... .......... .......... 43% 1.89M 3s
 13850K .......... .......... .......... .......... .......... 43% 96.7M 3s
 13900K .......... .......... .......... .......... .......... 44% 94.1M 3s
 13950K .......... .......... .......... .......... .......... 44%  189M 3s
 14000K .......... .......... .......... .......... .......... 44% 2.50G 3s
 14050K .......... .......... .......... .......... .......... 44% 2.54G 3s
 14100K .......... .......... .......... .......... .......... 44% 2.56G 3s
 14150K .......... .......... .......... .......... .......... 44% 2.34G 3s
 14200K .......... .......... .......... .......... .......... 44% 2.56G 3s
 14250K .......... .......... .......... .......... .......... 45% 2.56G 3s
 14300K .......... .......... .......... .......... .......... 45% 2.58G 3s
 14350K .......... .......... .......... .......... .......... 45% 2.08G 3s
 14400K .......... .......... .......... .......... .......... 45% 2.59G 2s
 14450K .......... .......... .......... .......... .......... 45% 2.58G 2s
 14500K .......... .......... .......... .......... .......... 45% 9.44M 3s
 14550K .......... .......... .......... .......... .......... 46%  971M 3s
 14600K .......... .......... .......... .......... .......... 46% 1.06G 2s
 14650K .......... .......... .......... .......... .......... 46% 1.10G 2s
 14700K .......... .......... .......... .......... .......... 46% 1.48G 2s
 14750K .......... .......... .......... .......... .......... 46% 1.06G 2s
 14800K .......... .......... .......... .......... .......... 46% 1.61G 2s
 14850K .......... .......... .......... .......... .......... 47% 1.66G 2s
 14900K .......... .......... .......... .......... .......... 47% 1.59G 2s
 14950K .......... .......... .......... .......... .......... 47% 1.56G 2s
 15000K .......... .......... .......... .......... .......... 47% 1.67G 2s
 15050K .......... .......... .......... .......... .......... 47% 1.61G 2s
 15100K .......... .......... .......... .......... .......... 47% 1.70G 2s
 15150K .......... .......... .......... .......... .......... 47% 1.46G 2s
 15200K .......... .......... .......... .......... .......... 48% 2.12G 2s
 15250K .......... .......... .......... .......... .......... 48% 2.11G 2s
 15300K .......... .......... .......... .......... .......... 48% 2.12G 2s
 15350K .......... .......... .......... .......... .......... 48% 1.95G 2s
 15400K .......... .......... .......... .......... .......... 48% 2.14G 2s
 15450K .......... .......... .......... .......... .......... 48% 2.12G 2s
 15500K .......... .......... .......... .......... .......... 49% 2.12G 2s
 15550K .......... .......... .......... .......... .......... 49% 1.73G 2s
 15600K .......... .......... .......... .......... .......... 49% 2.12G 2s
 15650K .......... .......... .......... .......... .......... 49% 2.13G 2s
 15700K .......... .......... .......... .......... .......... 49% 1.83G 2s
 15750K .......... .......... .......... .......... .......... 49% 1.93G 2s
 15800K .......... .......... .......... .......... .......... 50% 2.14G 2s
 15850K .......... .......... .......... .......... .......... 50% 10.2M 2s
 15900K .......... .......... .......... .......... .......... 50%  145M 2s
 15950K .......... .......... .......... .......... .......... 50% 55.9M 2s
 16000K .......... .......... .......... .......... .......... 50% 25.4M 2s
 16050K .......... .......... .......... .......... .......... 50% 76.2M 2s
 16100K .......... .......... .......... .......... .......... 50% 80.8M 2s
 16150K .......... .......... .......... .......... .......... 51% 81.5M 2s
 16200K .......... .......... .......... .......... .......... 51%  180M 2s
 16250K .......... .......... .......... .......... .......... 51% 45.0M 2s
 16300K .......... .......... .......... .......... .......... 51% 99.9M 2s
 16350K .......... .......... .......... .......... .......... 51%  180M 2s
 16400K .......... .......... .......... .......... .......... 51%  402M 2s
 16450K .......... .......... .......... .......... .......... 52%  257M 2s
 16500K .......... .......... .......... .......... .......... 52%  265M 2s
 16550K .......... .......... .......... .......... .......... 52% 12.0M 2s
 16600K .......... .......... .......... .......... .......... 52%  107M 2s
 16650K .......... .......... .......... .......... .......... 52% 97.1M 2s
 16700K .......... .......... .......... .......... .......... 52%  101M 2s
 16750K .......... .......... .......... .......... .......... 53% 21.2M 2s
 16800K .......... .......... .......... .......... .......... 53% 96.3M 2s
 16850K .......... .......... .......... .......... .......... 53% 76.8M 2s
 16900K .......... .......... .......... .......... .......... 53%  103M 2s
 16950K .......... .......... .......... .......... .......... 53% 36.0M 2s
 17000K .......... .......... .......... .......... .......... 53%  136M 2s
 17050K .......... .......... .......... .......... .......... 53% 94.1M 2s
 17100K .......... .......... .......... .......... .......... 54%  111M 2s
 17150K .......... .......... .......... .......... .......... 54%  266M 2s
 17200K .......... .......... .......... .......... .......... 54%  168M 2s
 17250K .......... .......... .......... .......... .......... 54%  267M 2s
 17300K .......... .......... .......... .......... .......... 54%  134M 2s
 17350K .......... .......... .......... .......... .......... 54%  287M 2s
 17400K .......... .......... .......... .......... .......... 55%  240M 2s
 17450K .......... .......... .......... .......... .......... 55%  203M 2s
 17500K .......... .......... .......... .......... .......... 55%  436M 2s
 17550K .......... .......... .......... .......... .......... 55%  127M 2s
 17600K .......... .......... .......... .......... .......... 55%  165M 2s
 17650K .......... .......... .......... .......... .......... 55%  279M 2s
 17700K .......... .......... .......... .......... .......... 56%  240M 2s
 17750K .......... .......... .......... .......... .......... 56%  378M 2s
 17800K .......... .......... .......... .......... .......... 56%  206M 2s
 17850K .......... .......... .......... .......... .......... 56%  407M 2s
 17900K .......... .......... .......... .......... .......... 56%  206M 2s
 17950K .......... .......... .......... .......... .......... 56% 96.3M 2s
 18000K .......... .......... .......... .......... .......... 56% 1.30M 2s
 18050K .......... .......... .......... .......... .......... 57%  648M 2s
 18100K .......... .......... .......... .......... .......... 57% 1.14G 2s
 18150K .......... .......... .......... .......... .......... 57% 39.8M 2s
 18200K .......... .......... .......... .......... .......... 57%  885M 2s
 18250K .......... .......... .......... .......... .......... 57%  679M 2s
 18300K .......... .......... .......... .......... .......... 57% 1.06G 2s
 18350K .......... .......... .......... .......... .......... 58%  556M 2s
 18400K .......... .......... .......... .......... .......... 58% 1.37G 2s
 18450K .......... .......... .......... .......... .......... 58% 1.58G 2s
 18500K .......... .......... .......... .......... .......... 58%  942M 2s
 18550K .......... .......... .......... .......... .......... 58%  982M 2s
 18600K .......... .......... .......... .......... .......... 58% 1.45G 2s
 18650K .......... .......... .......... .......... .......... 59% 1.15G 2s
 18700K .......... .......... .......... .......... .......... 59% 1.08G 2s
 18750K .......... .......... .......... .......... .......... 59% 1.31G 2s
 18800K .......... .......... .......... .......... .......... 59% 1.26G 2s
 18850K .......... .......... .......... .......... .......... 59% 1.36G 2s
 18900K .......... .......... .......... .......... .......... 59% 1.43G 2s
 18950K .......... .......... .......... .......... .......... 59% 1.26G 2s
 19000K .......... .......... .......... .......... .......... 60% 1.31G 2s
 19050K .......... .......... .......... .......... .......... 60% 1.92G 2s
 19100K .......... .......... .......... .......... .......... 60% 1.38G 2s
 19150K .......... .......... .......... .......... .......... 60% 1.69G 2s
 19200K .......... .......... .......... .......... .......... 60% 2.14G 2s
 19250K .......... .......... .......... .......... .......... 60% 2.18G 2s
 19300K .......... .......... .......... .......... .......... 61% 2.11G 2s
 19350K .......... .......... .......... .......... .......... 61% 2.00G 2s
 19400K .......... .......... .......... .......... .......... 61% 2.20G 2s
 19450K .......... .......... .......... .......... .......... 61% 2.19G 2s
 19500K .......... .......... .......... .......... .......... 61% 2.00G 2s
 19550K .......... .......... .......... .......... .......... 61% 2.11G 2s
 19600K .......... .......... .......... .......... .......... 62% 2.64G 2s
 19650K .......... .......... .......... .......... .......... 62% 2.64G 2s
 19700K .......... .......... .......... .......... .......... 62% 2.66G 2s
 19750K .......... .......... .......... .......... .......... 62% 2.42G 2s
 19800K .......... .......... .......... .......... .......... 62% 2.64G 2s
 19850K .......... .......... .......... .......... .......... 62% 2.66G 2s
 19900K .......... .......... .......... .......... .......... 62% 2.63G 2s
 19950K .......... .......... .......... .......... .......... 63% 2.14G 2s
 20000K .......... .......... .......... .......... .......... 63% 2.66G 2s
 20050K .......... .......... .......... .......... .......... 63% 5.14M 2s
 20100K .......... .......... .......... .......... .......... 63%  231M 2s
 20150K .......... .......... .......... .......... .......... 63%  228M 2s
 20200K .......... .......... .......... .......... .......... 63% 57.6M 2s
 20250K .......... .......... .......... .......... .......... 64%  543M 2s
 20300K .......... .......... .......... .......... .......... 64%  171M 2s
 20350K .......... .......... .......... .......... .......... 64%  113M 2s
 20400K .......... .......... .......... .......... .......... 64%  452M 2s
 20450K .......... .......... .......... .......... .......... 64%  120M 2s
 20500K .......... .......... .......... .......... .......... 64%  556M 2s
 20550K .......... .......... .......... .......... .......... 65%  302M 2s
 20600K .......... .......... .......... .......... .......... 65%  224M 2s
 20650K .......... .......... .......... .......... .......... 65%  373M 1s
 20700K .......... .......... .......... .......... .......... 65%  170M 1s
 20750K .......... .......... .......... .......... .......... 65%  347M 1s
 20800K .......... .......... .......... .......... .......... 65%  190M 1s
 20850K .......... .......... .......... .......... .......... 65%  424M 1s
 20900K .......... .......... .......... .......... .......... 66%  402M 1s
 20950K .......... .......... .......... .......... .......... 66%  595M 1s
 21000K .......... .......... .......... .......... .......... 66%  260M 1s
 21050K .......... .......... .......... .......... .......... 66%  234M 1s
 21100K .......... .......... .......... .......... .......... 66%  399M 1s
 21150K .......... .......... .......... .......... .......... 66%  408M 1s
 21200K .......... .......... .......... .......... .......... 67%  173M 1s
 21250K .......... .......... .......... .......... .......... 67%  251M 1s
 21300K .......... .......... .......... .......... .......... 67%  362M 1s
 21350K .......... .......... .......... .......... .......... 67%  379M 1s
 21400K .......... .......... .......... .......... .......... 67%  401M 1s
 21450K .......... .......... .......... .......... .......... 67%  237M 1s
 21500K .......... .......... .......... .......... .......... 68%  108M 1s
 21550K .......... .......... .......... .......... .......... 68%  113M 1s
 21600K .......... .......... .......... .......... .......... 68% 38.4M 1s
 21650K .......... .......... .......... .......... .......... 68% 9.90M 1s
 21700K .......... .......... .......... .......... .......... 68%  162M 1s
 21750K .......... .......... .......... .......... .......... 68%  548M 1s
 21800K .......... .......... .......... .......... .......... 68%  147M 1s
 21850K .......... .......... .......... .......... .......... 69%  270M 1s
 21900K .......... .......... .......... .......... .......... 69%  509M 1s
 21950K .......... .......... .......... .......... .......... 69%  145M 1s
 22000K .......... .......... .......... .......... .......... 69%  250M 1s
 22050K .......... .......... .......... .......... .......... 69%  204M 1s
 22100K .......... .......... .......... .......... .......... 69%  151M 1s
 22150K .......... .......... .......... .......... .......... 70%  150M 1s
 22200K .......... .......... .......... .......... .......... 70% 3.65M 1s
 22250K .......... .......... .......... .......... .......... 70%  101M 1s
 22300K .......... .......... .......... .......... .......... 70% 31.7M 1s
 22350K .......... .......... .......... .......... .......... 70%  428M 1s
 22400K .......... .......... .......... .......... .......... 70% 1.00G 1s
 22450K .......... .......... .......... .......... .......... 71%  261M 1s
 22500K .......... .......... .......... .......... .......... 71%  142M 1s
 22550K .......... .......... .......... .......... .......... 71% 28.2M 1s
 22600K .......... .......... .......... .......... .......... 71%  739M 1s
 22650K .......... .......... .......... .......... .......... 71%  266M 1s
 22700K .......... .......... .......... .......... .......... 71%  139M 1s
 22750K .......... .......... .......... .......... .......... 71% 11.8M 1s
 22800K .......... .......... .......... .......... .......... 72%  112M 1s
 22850K .......... .......... .......... .......... .......... 72%  456M 1s
 22900K .......... .......... .......... .......... .......... 72%  250M 1s
 22950K .......... .......... .......... .......... .......... 72%  131M 1s
 23000K .......... .......... .......... .......... .......... 72%  184M 1s
 23050K .......... .......... .......... .......... .......... 72%  285M 1s
 23100K .......... .......... .......... .......... .......... 73%  354M 1s
 23150K .......... .......... .......... .......... .......... 73%  273M 1s
 23200K .......... .......... .......... .......... .......... 73%  548M 1s
 23250K .......... .......... .......... .......... .......... 73% 1.67G 1s
 23300K .......... .......... .......... .......... .......... 73% 1.48G 1s
 23350K .......... .......... .......... .......... .......... 73% 1.52G 1s
 23400K .......... .......... .......... .......... .......... 74% 1.63G 1s
 23450K .......... .......... .......... .......... .......... 74% 1.27G 1s
 23500K .......... .......... .......... .......... .......... 74% 1.80G 1s
 23550K .......... .......... .......... .......... .......... 74% 1.13G 1s
 23600K .......... .......... .......... .......... .......... 74% 2.04G 1s
 23650K .......... .......... .......... .......... .......... 74% 1.21G 1s
 23700K .......... .......... .......... .......... .......... 74%  572M 1s
 23750K .......... .......... .......... .......... .......... 75%  100M 1s
 23800K .......... .......... .......... .......... .......... 75%  423M 1s
 23850K .......... .......... .......... .......... .......... 75% 79.9M 1s
 23900K .......... .......... .......... .......... .......... 75% 1.63M 1s
 23950K .......... .......... .......... .......... .......... 75%  829M 1s
 24000K .......... .......... .......... .......... .......... 75%  797M 1s
 24050K .......... .......... .......... .......... .......... 76% 1.03G 1s
 24100K .......... .......... .......... .......... .......... 76%  994M 1s
 24150K .......... .......... .......... .......... .......... 76% 1.49G 1s
 24200K .......... .......... .......... .......... .......... 76% 1.69G 1s
 24250K .......... .......... .......... .......... .......... 76% 1.30G 1s
 24300K .......... .......... .......... .......... .......... 76% 1.69G 1s
 24350K .......... .......... .......... .......... .......... 77% 1.05G 1s
 24400K .......... .......... .......... .......... .......... 77% 1.58G 1s
 24450K .......... .......... .......... .......... .......... 77% 1.37G 1s
 24500K .......... .......... .......... .......... .......... 77% 1.08G 1s
 24550K .......... .......... .......... .......... .......... 77% 1.52G 1s
 24600K .......... .......... .......... .......... .......... 77% 1.67G 1s
 24650K .......... .......... .......... .......... .......... 77% 1.77G 1s
 24700K .......... .......... .......... .......... .......... 78% 2.12G 1s
 24750K .......... .......... .......... .......... .......... 78% 1.71G 1s
 24800K .......... .......... .......... .......... .......... 78% 2.13G 1s
 24850K .......... .......... .......... .......... .......... 78% 2.12G 1s
 24900K .......... .......... .......... .......... .......... 78% 2.12G 1s
 24950K .......... .......... .......... .......... .......... 78% 4.37M 1s
 25000K .......... .......... .......... .......... .......... 79% 1.10G 1s
 25050K .......... .......... .......... .......... .......... 79% 1.28G 1s
 25100K .......... .......... .......... .......... .......... 79%  824M 1s
 25150K .......... .......... .......... .......... .......... 79%  862M 1s
 25200K .......... .......... .......... .......... .......... 79%  795M 1s
 25250K .......... .......... .......... .......... .......... 79%  797M 1s
 25300K .......... .......... .......... .......... .......... 80% 1.46G 1s
 25350K .......... .......... .......... .......... .......... 80% 1.58G 1s
 25400K .......... .......... .......... .......... .......... 80% 1.71G 1s
 25450K .......... .......... .......... .......... .......... 80% 1.69G 1s
 25500K .......... .......... .......... .......... .......... 80% 1.29G 1s
 25550K .......... .......... .......... .......... .......... 80% 1.02G 1s
 25600K .......... .......... .......... .......... .......... 80% 1.61G 1s
 25650K .......... .......... .......... .......... .......... 81% 1.72G 1s
 25700K .......... .......... .......... .......... .......... 81% 1.73G 1s
 25750K .......... .......... .......... .......... .......... 81% 1.58G 1s
 25800K .......... .......... .......... .......... .......... 81% 1.71G 1s
 25850K .......... .......... .......... .......... .......... 81% 1.81G 1s
 25900K .......... .......... .......... .......... .......... 81% 2.16G 1s
 25950K .......... .......... .......... .......... .......... 82% 4.23M 1s
 26000K .......... .......... .......... .......... .......... 82% 78.4M 1s
 26050K .......... .......... .......... .......... .......... 82%  373M 1s
 26100K .......... .......... .......... .......... .......... 82%  382M 1s
 26150K .......... .......... .......... .......... .......... 82%  275M 1s
 26200K .......... .......... .......... .......... .......... 82%  422M 1s
 26250K .......... .......... .......... .......... .......... 83%  136M 1s
 26300K .......... .......... .......... .......... .......... 83%  971M 1s
 26350K .......... .......... .......... .......... .......... 83%  286M 1s
 26400K .......... .......... .......... .......... .......... 83% 92.4M 1s
 26450K .......... .......... .......... .......... .......... 83%  985M 1s
 26500K .......... .......... .......... .......... .......... 83%  210M 1s
 26550K .......... .......... .......... .......... .......... 83%  326M 1s
 26600K .......... .......... .......... .......... .......... 84%  160M 1s
 26650K .......... .......... .......... .......... .......... 84%  359M 1s
 26700K .......... .......... .......... .......... .......... 84%  312M 1s
 26750K .......... .......... .......... .......... .......... 84%  187M 1s
 26800K .......... .......... .......... .......... .......... 84%  119M 1s
 26850K .......... .......... .......... .......... .......... 84% 1.18G 1s
 26900K .......... .......... .......... .......... .......... 85%  311M 1s
 26950K .......... .......... .......... .......... .......... 85%  325M 1s
 27000K .......... .......... .......... .......... .......... 85%  246M 1s
 27050K .......... .......... .......... .......... .......... 85% 1.17G 1s
 27100K .......... .......... .......... .......... .......... 85%  210M 1s
 27150K .......... .......... .......... .......... .......... 85%  171M 1s
 27200K .......... .......... .......... .......... .......... 86% 7.26M 1s
 27250K .......... .......... .......... .......... .......... 86% 39.0M 1s
 27300K .......... .......... .......... .......... .......... 86%  139M 1s
 27350K .......... .......... .......... .......... .......... 86%  122M 1s
 27400K .......... .......... .......... .......... .......... 86%  228M 1s
 27450K .......... .......... .......... .......... .......... 86%  306M 1s
 27500K .......... .......... .......... .......... .......... 86%  153M 1s
 27550K .......... .......... .......... .......... .......... 87%  222M 1s
 27600K .......... .......... .......... .......... .......... 87%  294M 1s
 27650K .......... .......... .......... .......... .......... 87%  226M 1s
 27700K .......... .......... .......... .......... .......... 87% 82.7M 1s
 27750K .......... .......... .......... .......... .......... 87%  133M 1s
 27800K .......... .......... .......... .......... .......... 87%  153M 1s
 27850K .......... .......... .......... .......... .......... 88%  528M 1s
 27900K .......... .......... .......... .......... .......... 88%  159M 0s
 27950K .......... .......... .......... .......... .......... 88%  192M 0s
 28000K .......... .......... .......... .......... .......... 88%  205M 0s
 28050K .......... .......... .......... .......... .......... 88%  302M 0s
 28100K .......... .......... .......... .......... .......... 88%  321M 0s
 28150K .......... .......... .......... .......... .......... 89%  124M 0s
 28200K .......... .......... .......... .......... .......... 89%  247M 0s
 28250K .......... .......... .......... .......... .......... 89%  343M 0s
 28300K .......... .......... .......... .......... .......... 89% 2.84M 0s
 28350K .......... .......... .......... .......... .......... 89% 43.9M 0s
 28400K .......... .......... .......... .......... .......... 89%  743M 0s
 28450K .......... .......... .......... .......... .......... 89% 1.22G 0s
 28500K .......... .......... .......... .......... .......... 90% 1.25G 0s
 28550K .......... .......... .......... .......... .......... 90%  731M 0s
 28600K .......... .......... .......... .......... .......... 90% 1.24G 0s
 28650K .......... .......... .......... .......... .......... 90% 1.27G 0s
 28700K .......... .......... .......... .......... .......... 90% 1.26G 0s
 28750K .......... .......... .......... .......... .......... 90% 1.36G 0s
 28800K .......... .......... .......... .......... .......... 91% 1.26G 0s
 28850K .......... .......... .......... .......... .......... 91% 1.31G 0s
 28900K .......... .......... .......... .......... .......... 91%  776M 0s
 28950K .......... .......... .......... .......... .......... 91% 1.39G 0s
 29000K .......... .......... .......... .......... .......... 91% 5.02M 0s
 29050K .......... .......... .......... .......... .......... 91% 80.1M 0s
 29100K .......... .......... .......... .......... .......... 92%  228M 0s
 29150K .......... .......... .......... .......... .......... 92%  742M 0s
 29200K .......... .......... .......... .......... .......... 92%  611M 0s
 29250K .......... .......... .......... .......... .......... 92%  383M 0s
 29300K .......... .......... .......... .......... .......... 92%  603M 0s
 29350K .......... .......... .......... .......... .......... 92%  186M 0s
 29400K .......... .......... .......... .......... .......... 92%  578M 0s
 29450K .......... .......... .......... .......... .......... 93% 1.63G 0s
 29500K .......... .......... .......... .......... .......... 93% 76.7M 0s
 29550K .......... .......... .......... .......... .......... 93%  112M 0s
 29600K .......... .......... .......... .......... .......... 93%  136M 0s
 29650K .......... .......... .......... .......... .......... 93%  411M 0s
 29700K .......... .......... .......... .......... .......... 93% 2.12G 0s
 29750K .......... .......... .......... .......... .......... 94% 96.9M 0s
 29800K .......... .......... .......... .......... .......... 94% 1.74G 0s
 29850K .......... .......... .......... .......... .......... 94% 1.75G 0s
 29900K .......... .......... .......... .......... .......... 94% 1.77G 0s
 29950K .......... .......... .......... .......... .......... 94% 1.42G 0s
 30000K .......... .......... .......... .......... .......... 94% 1.43G 0s
 30050K .......... .......... .......... .......... .......... 95% 1.67G 0s
 30100K .......... .......... .......... .......... .......... 95% 1.70G 0s
 30150K .......... .......... .......... .......... .......... 95% 1.58G 0s
 30200K .......... .......... .......... .......... .......... 95% 2.14G 0s
 30250K .......... .......... .......... .......... .......... 95% 1.76G 0s
 30300K .......... .......... .......... .......... .......... 95% 2.19G 0s
 30350K .......... .......... .......... .......... .......... 95% 1.80G 0s
 30400K .......... .......... .......... .......... .......... 96% 43.1M 0s
 30450K .......... .......... .......... .......... .......... 96%  451M 0s
 30500K .......... .......... .......... .......... .......... 96%  218M 0s
 30550K .......... .......... .......... .......... .......... 96% 93.0M 0s
 30600K .......... .......... .......... .......... .......... 96%  136M 0s
 30650K .......... .......... .......... .......... .......... 96%  380M 0s
 30700K .......... .......... .......... .......... .......... 97% 95.3M 0s
 30750K .......... .......... .......... .......... .......... 97% 44.5M 0s
 30800K .......... .......... .......... .......... .......... 97% 11.1M 0s
 30850K .......... .......... .......... .......... .......... 97% 99.1M 0s
 30900K .......... .......... .......... .......... .......... 97%  190M 0s
 30950K .......... .......... .......... .......... .......... 97% 86.6M 0s
 31000K .......... .......... .......... .......... .......... 98%  698M 0s
 31050K .......... .......... .......... .......... .......... 98%  339M 0s
 31100K .......... .......... .......... .......... .......... 98%  219M 0s
 31150K .......... .......... .......... .......... .......... 98%  202M 0s
 31200K .......... .......... .......... .......... .......... 98%  169M 0s
 31250K .......... .......... .......... .......... .......... 98% 1.14M 0s
 31300K .......... .......... .......... .......... .......... 98% 2.04M 0s
 31350K .......... .......... .......... .......... .......... 99% 4.08M 0s
 31400K .......... .......... .......... .......... .......... 99% 4.06M 0s
 31450K .......... .......... .......... .......... .......... 99%  604M 0s
 31500K .......... .......... .......... .......... .......... 99% 4.23M 0s
 31550K .......... .......... .......... .......... .......... 99%  834M 0s
 31600K .......... .......... .......... .......... .......... 99%  955M 0s
 31650K .......... .......... .......... ..                   100% 1.38G=5.0s

2020-03-02 04:15:51 (52.1 Mb/s) - ‘/dev/null’ saved [32443039/32443039]

